--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vue/cli-shared-utils": "^4.2.3",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
