--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vue/cli-shared-utils": "^4.2.3",
     "core-js": "^3.6.4",
+    "csv-file-to-json": "^4.0.3",
     "element-ui": "^2.13.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
