--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "main": "background.js",
   "dependencies": {
     "@vue/cli-shared-utils": "^4.2.3",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
+    "crawler": "^1.2.1",
     "csv-file-to-json": "^4.0.3",
     "element-ui": "^2.13.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "nanoid": "^2.1.11",
+    "qs": "^6.9.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
