--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
     "electron": "^6.0.0",
+    "electron-builder": "^22.4.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-cli-plugin-electron-builder": "~1.4.6",
