--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - checkout
       - run: yarn && yarn electron:build --win
+      - store_artifacts:
+          path: /root/project/build
 
 workflows:
   version: 2
