--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,18 @@
-- name: Electron Builder Action
-  uses: samuelmeuli/action-electron-builder@v1.3.
+name: Build/release
+
+on:
+  push:
+    tags:
+      - 'v1.0.0'
+
+jobs:
+  release:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [windows-2019]
+
+    steps:
+      - name: Electron Builder Action
+        uses: samuelmeuli/action-electron-builder@v1.3.0
