--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
       - checkout
       - run: yarn && yarn electron:build --win
       - store_artifacts:
-          path: /tmp/build
-          destination: build
+          path: /root/project/dist_electron
 
 workflows:
   version: 2
